massive updates
anchors, alignment, grouping, parenting, icons and more